--- a/main.css
+++ b/main.css
@@ -57,6 +57,7 @@ a:hover {
     height: 49vh;
     width: 100%;
     padding-top: 10vh;
+    padding-top: 5vh;
 }
 
 .black {
@@ -65,6 +66,7 @@ a:hover {
     width: 100%;
     color: black;
     padding-top: 10vh;
+    padding-top: 5vh;
 }
 
 h1 {
@@ -90,4 +92,29 @@ h3 {
     width: 25vw;
     padding-left: 5vw;
 
+}
+
+#avion_projs {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding-left: 7vw;
+}
+
+.avion_proj {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    border: 2px double black;
+    width: 10vw;
+    height: 2.5vw;
+    text-align: center;
+    justify-content: center;
+    margin-top: 1vh;
+
+}
+
+a {
+    text-decoration: underline;
+    color: black;
 }
